--- a/Entrega 3/stylesheet.css
+++ b/Entrega 3/stylesheet.css
@@ -76,7 +76,7 @@ h1 {
     font-size: 40px;
     font-family:  "Century Gothic", sans-serif; 
     color: #1954A0 ;
-    border-bottom: 3px solid black;
+    border-bottom: 2px solid black;
     margin-top: 90px;
     margin-bottom: 50px;
     margin-right: 160px;
@@ -111,7 +111,7 @@ p {
     font-size: 20px;
     font-family: "Courier New" ;
     color: black ;
-    margin-top: 35px;
+    margin-top: 10px;
     margin-bottom: 35px;
     margin-right: 200px;
     margin-left: 200px;
@@ -131,7 +131,7 @@ a {
 }
 
 .lista li a:hover{
-    color: #F06A67;
+    color: #1954A0;
     font-weight: bold;
 }
 
@@ -225,7 +225,7 @@ nav li {
 }
 nav a {
     background: #1954A0;
-    color: black;
+    color: white;
     display: block;
     font: bold 16px/50px sans-serif;
     padding: 0 25px;
